# twitchmod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_GITHUB.md  SETUP.md  changelog.txt  run-twitchmod.sh
.github/workflows/: build.yml
src/: channellist.cpp  channellist.h  chatwidget.cpp  chatwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  polldialog.cpp  polldialog.h  predictiondialog.cpp  predictiondialog.h  userlist.cpp  userlist.h
src/twitch/: oauthserver.cpp  oauthserver.h  twitchapi.cpp  twitchapi.h  twitchauth.cpp  twitchauth.h  twitchwebsocket.cpp  twitchwebsocket.h
